[metadata]
name = scrapbin
summary = Chef Client report collector
description-file =
    README.rst
author = Matt Odden
author-email = locke105@gmail.com

[files]
packages =
    scrapbin

[entry_points]
console_scripts =
    scrapbin-flask = scrapbin.flaskapi:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
